ncc/testsuite/negative/partial-1.n
namespace Tyvars
{
  partial class C [X] { } // E: partial declarations of `Tyvars.C' must have the same type parameter names in the same order
  partial class C [Y] { } // H: other part
}
